syntax="proto3";

package proto;

// protoc --proto_path=service/account/proto --go_out=service/account/proto --micro_out=service/account/proto service/account/proto/user.proto

service UserService{
    rpc Signup (ReqSignup) returns (RespSignup);
    rpc Signin (ReqSignin) returns (RespSignin);
    rpc UserInfo (ReqUserInfo) returns (RespUserInfo);
}


message ReqSignup{
    string username=1;
    string password=2;
}
message RespSignup{
    int32 code=1;
    string message=2;
}


message ReqSignin{
    string username=1;
    string password=2;
}
message RespSignin{
    int32 code=1;
    string message=2;
    string token=3;
}

message ReqUserInfo{
    string username=1;
}
message RespUserInfo{
    int32 code=1;
    string message=2;
    string signupAt=3;
}
